--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .modalWindow {
+    background: -webkit-gradient(linear, right top, left top, color-stop(49.40%, #FFF), color-stop(68.40%, rgba(255, 255, 255, 0.00)));
+    background: -o-linear-gradient(right, #FFF 49.40%, rgba(255, 255, 255, 0.00) 68.40%);
     background: linear-gradient(270deg, #FFF 49.40%, rgba(255, 255, 255, 0.00) 68.40%);
     position: fixed;
     top: 38%;
     width: 68.75rem;
     height: 18.75rem;
+    display: -ms-grid;
     display: grid;
     background-color: rgba(232, 231, 220, 0.947);
     z-index: 222;
@@ -23,31 +27,55 @@
 }
 
 .modalWindow_text {
+    width: -webkit-min-content;
+    width: -moz-min-content;
+    width: min-content;
     left: 21rem;
     top: 2rem;
     position: absolute;
+    display: -ms-grid;
     display: grid;
     row-gap: 0.32rem;
     overflow-y: auto;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-content: stretch;
-    align-items: stretch;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
 }
 
 .modalWindow_text2 {
+    width: revert;
     left: 28rem;
     top: 2rem;
     position: absolute;
+    display: -ms-grid;
     display: grid;
     row-gap: 0.32rem;
     overflow-y: auto;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-content: stretch;
-    align-items: stretch;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
 }
 
 /* loading anim */
@@ -56,7 +84,9 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     width: 150px;
     height: 150px;
     background: transparent;
@@ -70,7 +100,8 @@
     letter-spacing: 4px;
     text-transform: uppercase;
     text-shadow: 0 0 10px #fff000;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+            box-shadow: 0 0 20px rgba(0, 0, 0, .5);
 }
 
 .ring:before {
@@ -84,7 +115,8 @@
     border-top: 3px solid #fff000;
     border-right: 3px solid #fff000;
     border-radius: 50%;
-    animation: animateC 2s linear infinite;
+    -webkit-animation: animateC 2s linear infinite;
+            animation: animateC 2s linear infinite;
 }
 
 span {
@@ -95,8 +127,11 @@ span {
     width: 50%;
     height: 4px;
     background: transparent;
-    transform-origin: left;
-    animation: animate 2s linear infinite;
+    -webkit-transform-origin: left;
+        -ms-transform-origin: left;
+            transform-origin: left;
+    -webkit-animation: animate 2s linear infinite;
+            animation: animate 2s linear infinite;
 }
 
 span:before {
@@ -108,18 +143,25 @@ span:before {
     background: #fff000;
     top: -6px;
     right: -8px;
-    box-shadow: 0 0 20px #fff000;
+    -webkit-box-shadow: 0 0 20px #fff000;
+            box-shadow: 0 0 20px #fff000;
 }
 
 .contener {
+    display: -ms-grid;
     display: grid;
     grid-column-gap: 4em;
     grid-row-gap: 4em;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     justify-items: center;
-    align-items: center;
-    align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
     padding-top: 57px;
     background-color: rgb(219, 217, 217);
 }
@@ -129,24 +171,38 @@ img {
     top: -.96rem;
     width: 18.75rem;
     height: 18.75rem;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     z-index: 10;
-    box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 
 }
 
 .backgroundImg {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
-    align-content: space-around;
-    justify-content: flex-end;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: distribute;
+        align-content: space-around;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 20.75rem;
     height: 23.8125rem;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     border-radius: 0.625rem;
     background: #f8f6f6f0;
 
@@ -171,14 +227,20 @@ img {
 /* media for mob */
 @media screen and (max-width: 600px) {
     .modalWindow {
-        box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, .2);
+        -webkit-box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, .2);
+                box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, .2);
         position: fixed;
         top: 18%;
         width: 18.75rem;
         height: 39rem;
+        display: -ms-grid;
         display: grid;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         background-color: rgba(232, 231, 220, 0.947);
         z-index: 222;
         border-radius: 20px;
@@ -190,50 +252,102 @@ img {
     }
 
     .modalWindow_text {
+        width: -webkit-min-content;
+        width: -moz-min-content;
+        width: min-content;
         top: 21rem;
         left: 2rem;
         position: absolute;
+        display: -ms-grid;
         display: grid;
         row-gap: 0.32rem;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-content: space-around;
-        align-items: stretch;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -ms-flex-line-pack: distribute;
+            align-content: space-around;
+        -webkit-box-align: stretch;
+            -ms-flex-align: stretch;
+                align-items: stretch;
         overflow-y: auto;
     }
 
     .modalWindow_text2 {
+        width: revert;
         top: 21rem;
         left: 10rem;
         position: absolute;
+        display: -ms-grid;
         display: grid;
         row-gap: 0.32rem;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-content: space-around;
-        align-items: stretch;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -ms-flex-line-pack: distribute;
+            align-content: space-around;
+        -webkit-box-align: stretch;
+            -ms-flex-align: stretch;
+                align-items: stretch;
     }
 
 }
 
-@keyframes animateC {
+@-webkit-keyframes animateC {
     0% {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
     }
 
     100% {
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
+}
+
+@keyframes animateC {
+    0% {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes animate {
+    0% {
+        -webkit-transform: rotate(45deg);
+                transform: rotate(45deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(405deg);
+                transform: rotate(405deg);
     }
 }
 
 @keyframes animate {
     0% {
-        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+                transform: rotate(45deg);
     }
 
     100% {
-        transform: rotate(405deg);
+        -webkit-transform: rotate(405deg);
+                transform: rotate(405deg);
     }
 }
