--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
   
   .modalWindow {
     overflow: auto;
-    background: -webkit-linear-gradient(right, #FFF 49.4%, rgba(255, 255, 255, 0) 68.4%);
+    background: -webkit-gradient(linear, right top, left top, color-stop(49.4%, #FFF), color-stop(68.4%, rgba(255, 255, 255, 0)));
+    background: -o-linear-gradient(right, #FFF 49.4%, rgba(255, 255, 255, 0) 68.4%);
     background: linear-gradient(270deg, #FFF 49.4%, rgba(255, 255, 255, 0) 68.4%);
     position: fixed;
     
-    width: 37.75rem;
+    width: 40.75rem;
     height: 18.75rem;
     display: -ms-grid;
     display: grid;
@@ -25,10 +27,9 @@
   }
   
   .modalWindow_text {
-    width: -moz-min-content;
-    width: -webkit-min-content;
-    width: min-content;
-    left: 21rem;
+    
+    width: auto;
+    left: 18rem;
     top: 2rem;
     position: absolute;
     display: -ms-grid;
@@ -52,7 +53,8 @@
   }
   
   .modalWindow_text2 {
-    width: revert;
+   
+    width: auto;
     left: 28rem;
     top: 2rem;
     position: absolute;
@@ -82,7 +84,8 @@
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     width: 150px;
     height: 150px;
     background: transparent;
@@ -96,7 +99,8 @@
     letter-spacing: 4px;
     text-transform: uppercase;
     text-shadow: 0 0 10px #fff000;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   }
   .ring:before {
     content: "";
@@ -122,7 +126,8 @@
     height: 4px;
     background: transparent;
     -webkit-transform-origin: left;
-            transform-origin: left;
+            -ms-transform-origin: left;
+        transform-origin: left;
     -webkit-animation: animate 2s linear infinite;
             animation: animate 2s linear infinite;
   }
@@ -135,7 +140,8 @@
     background: #fff000;
     top: -6px;
     right: -8px;
-    box-shadow: 0 0 20px #fff000;
+    -webkit-box-shadow: 0 0 20px #fff000;
+            box-shadow: 0 0 20px #fff000;
   }
   
   .contener {
@@ -167,7 +173,8 @@
     -ms-flex-negative: 0;
         flex-shrink: 0;
     z-index: 10;
-    box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
   }
   
@@ -214,7 +221,8 @@
   /* media for mob */
   @media screen and (max-width: 621px) {
     .modalWindow {
-      box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, 0.2);
+      -webkit-box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, 0.2);
+              box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, 0.2);
       position: fixed;
       top: 5%;
       left: auto;
