--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ img {
     position: absolute;
   }
   .modalWindow_text {
-    width: auto;
+  width: 8rem;
     top: 21rem;
     left: 2rem;
     position: absolute;
@@ -475,17 +475,18 @@ img {
     flex-wrap: wrap;
     -webkit-box-pack: space-evenly;
     -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
     -ms-flex-line-pack: distribute;
-    align-content: space-around;
+    align-content: stretch;
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
-    align-items: stretch;
     overflow-y: auto;
+    justify-items: start;
+    justify-content: space-evenly;
+    align-items: end;
   }
   .modalWindow_text2 {
     width: auto;
