--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ img {
     position: absolute;
   }
   .modalWindow_text {
-  width: 8rem;
+  width: 7rem;
     top: 21rem;
     left: 2rem;
     position: absolute;
@@ -489,9 +489,9 @@ img {
     align-items: end;
   }
   .modalWindow_text2 {
-    width: auto;
+    width: 9rem;
     top: 21rem;
-    left: 10rem;
+    left: 8rem;
     position: absolute;
     display: -ms-grid;
     display: grid;
@@ -500,16 +500,17 @@ img {
     flex-wrap: wrap;
     -webkit-box-pack: space-evenly;
     -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
     -ms-flex-line-pack: distribute;
-    align-content: space-around;
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
-    align-items: stretch;
+    justify-items: start;
+    border-left: 2px solid #ccc;
+    margin-left: 20px;
+    padding-left: 10px;
   }
 }
 @media screen and (max-height: 405px) {
